Implemented authorization API calls
New authorization methods were added: API Key and oauth2.
