# src/opera/api/controllers/update_controller.py
@@ -4,11 +4,13 @@ from opera.api.log import get_logger
 from opera.api.openapi.models import OperationType, Invocation
 from opera.api.openapi.models.just_message import JustMessage
 from opera.api.util import xopera_util
+from opera.api.controllers import security_controller
 
 logger = get_logger(__name__)
 invocation_service = InvocationService()
 
-
+@security_controller.check_role_auth_blueprint
+@security_controller.check_role_auth_session
 def post_update(session_token, blueprint_token, version_tag=None, workers=1):
     """
     Update
@@ -27,12 +29,6 @@ def post_update(session_token, blueprint_token, version_tag=None, workers=1):
     :rtype: Invocation
     """
     inputs = xopera_util.inputs_file()
-
-    if not SQL_database.get_session_data(session_token):
-        return JustMessage(f"Session with session_token: {session_token} does not exist, cannot update"), 404
-    if not CSAR_db.version_exists(blueprint_token, version_tag):
-        return JustMessage(
-            f"Did not find blueprint with token: {blueprint_token} and version_id: {version_tag or 'any'}"), 404
 
     result = invocation_service.invoke(OperationType.UPDATE, blueprint_token, version_tag, session_token,
                                        workers, inputs)
